[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = "1.0.0"
anyhow = "1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
base16ct = "0.3.0"
gray_matter = "0.3.2"
walkdir = "2.5.0"
regex = "1.10.4"
tera = "1.19.1"
kuchikiki = "0.8.2"
imagesize = "0.14.0"
syntect = "5.3.0"

[lints.clippy]
todo = "warn"                           # Warn on todo!
# Super pedantic stuff
pedantic = "warn"
empty_line_after_doc_comments = "warn"  # Checks for empty lines after documentation comments
default_trait_access = "warn"           # Checks for literal calls to `Default::default()`
enum_glob_use = "warn"                  # Checks for `use Enum::*`
cloned_instead_of_copied = "warn"       # Checks for when `copied()` could be used instead of `cloned()`
