[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
markdown = "1.0.0"
anyhow = "1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
gray_matter = "0.3.2"
tera = "1.19.1"
kuchikiki = "0.8.2"
markup5ever = "0.11"
imagesize = "0.14.0"
syntect = "5.3.0"
base64 = "0.22.1"
glob = "0.3.3"
toml = "0.9.10"
regex = "1"
serde_with = { version = "3.16.1", features = ["alloc"] }
clap = { version = "4.5.54", features = ["derive"] }

[lints.clippy]
todo = "warn"
pedantic = "warn"
